--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 * {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
     /* 
     -May want to add "border-box for "box-sizing so padding does not affect width
     -Reset margin and padding 
@@ -6,18 +9,24 @@
   }
 
   body {
+    background-color: #344a72;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     /* 
       -Background color is #344a72
     */
   }
 
   a {
+    text-decoration: none;
     /* 
     Underlined links are ugly :)
    */
   }
 
   #container {
+    max-width: 350px;
+    margin: auto;
+    padding: 20px 10px;
     /* 
     -Remember, margin: auto on left and right will center a block element 
     -I would also set a "max-width" for responsiveness
@@ -26,6 +35,8 @@
   }
 
   .form-wrap {
+    background-color: white;
+    padding: 10px;
     /* 
       This is the white area around the form and heading, etc
     */
@@ -33,30 +44,55 @@
 
   .form-wrap h1,
   .form-wrap p {
+    text-align: center;
+    padding: 5px 10px;
     /* 
       May want to center these
     */
   }
 
   .form-wrap .form-group {
+    margin: 20px;
     /* 
       Each label, input is wrapped in .form-group
     */
   }
 
   .form-wrap .form-group label {
+    display: block;
+    padding-bottom: 5px;
+    color: #78797a;
     /* 
       Label should be turned into a block element
     */
   }
 
   .form-wrap .form-group input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #b8bcc2;
     /* 
       Inputs should reach accross the .form-wrap 100% and have some padding
     */
   }
 
+  .form-wrap .form-group #passwordError {
+    display: none;
+    color: red;
+  }
+
+  .form-wrap .form-group #formSubmitted {
+    display: none;
+    color: green;
+  }
+
   .form-wrap button {
+    display: block;
+    color: white;
+    width: 100%;
+    padding: 10px;
+    background-color: #49c1a2;
+    border: none
     /* 
       Button should wrap accross 100% and display as block
       Background color for button is #49c1a2
@@ -64,25 +100,35 @@
   }
 
   .form-wrap button:hover {
+    background-color: #37a08e;
     /* 
       Hover background color for button is #37a08e
     */
   }
 
   .form-wrap .bottom-text {
+    font-size: 0.75em;
+    line-height: 1.5em;
     /* 
       Bottom text is smaller
     */
   }
 
   footer {
+    justify-content: center;
     /* 
     Should be centered
    */
   }
 
   footer a {
+    color: #49c1a2;
     /* 
       Footer link color is #49c1a2
     */
+  }
+
+  footer p {
+    color: white;
+    padding: 10px 20px;
   }
